# SIG-rules-authors

./: .pre-commit-config.yaml  MODULE.bazel  README.md  WORKSPACE.bazel  _config.yml  go-tutorial.md  hosting-policy.md  index.md  package.json  pnpm-lock.yaml  proto-grpc.md
.github/: FUNDING.yml
.github/workflows/: ci.yaml
_sass/color_schemes/: custom.scss
catalog/: BUILD.bazel  README.md  add_ruleset.sh  rulesets.js  rulesets.json  rulesets.schema.json  scrape_data.sh
experimental/rules-keeper/: github.go  github_logger.go  go.mod  go.sum  main.go  metrics_project_activity.go  metrics_project_health.go  metrics_project_popularity.go  versions.go  versions_module_file.go
experimental/rules-keeper/proto/: ruleset.pb.go  ruleset.proto
experimental/rules-keeper/store/aspect-build/rules_ts/metrics/: commit_activity.csv  commit_activity.metadata  community_health.csv  community_health.metadata  issue_activity.csv  issue_activity.metadata  repo_stats.csv  repo_stats.metadata
experimental/rules-keeper/store/aspect-build/rules_ts/versions/main/: METADATA
experimental/rules-keeper/store/aspect-build/rules_ts/versions/v0.1.0/: METADATA
experimental/rules-keeper/store/aspect-build/rules_ts/versions/v0.10.0/: METADATA
experimental/rules-keeper/store/aspect-build/rules_ts/versions/v0.11.0/: METADATA
experimental/rules-keeper/store/aspect-build/rules_ts/versions/v0.12.0/: METADATA
experimental/rules-keeper/timeseries/: timeseries.go
experimental/rules-keeper/timeseries/proto/: timeseries.pb.go  timeseries.proto
(+46 files in other folders)
